parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    LCOMMENT
    DUPLICATE
    REMARK
    RULE
    PRIORITY
    RCOMMENT
    ROTATABLE
    LINECOMMENT
    WHERE
    RECURSIVE
    BLOCKCOMMENT
    PRIMARY
    SECONDARY

Grammar

Rule 0     S' -> petabricks
Rule 1     petabricks -> include define ifdefs transform ccode petabricks
Rule 2     petabricks -> empty
Rule 3     include -> empty
Rule 4     include -> INCLUDE FILE
Rule 5     define -> empty
Rule 6     define -> DEFINE ID
Rule 7     define -> DEFINE ID LPAREN id_list RPAREN expression
Rule 8     define -> DEFINE ID LPAREN id_list RPAREN LBRACE LINE RBRACE
Rule 9     define -> DEFINE ID expression
Rule 10    define -> UNDEF ID
Rule 11    define -> UNDEF ID LPAREN id_list RPAREN
Rule 12    define -> UNDEF ID LPAREN id_list RPAREN expression
Rule 13    define -> UNDEF ID expression
Rule 14    id_list -> ID COMMA id_list
Rule 15    id_list -> ID
Rule 16    ifdefs -> ifdef
Rule 17    ifdefs -> empty
Rule 18    ifdef -> IFDEF cond_id petabricks elif_block
Rule 19    ifdef -> IFDEF cond_id body elif_block
Rule 20    ifdef -> IFNDEF cond_id petabricks elif_block
Rule 21    ifdef -> IFNDEF cond_id body elif_block
Rule 22    ifdef -> IF cond_number petabricks elif_block
Rule 23    ifdef -> IF cond_number body elif_block
Rule 24    elif_block -> ELIF cond_number petabricks elif_block
Rule 25    elif_block -> ELIF cond_number body elif_block
Rule 26    elif_block -> ELSE petabricks ENDIF
Rule 27    elif_block -> ELSE body ENDIF
Rule 28    elif_block -> ENDIF
Rule 29    cond_id -> ID
Rule 30    cond_id -> LINE
Rule 31    cond_number -> OTHER
Rule 32    cond_number -> LINE
Rule 33    transform -> empty
Rule 34    transform -> transform_headers LBRACE body RBRACE
Rule 35    transform_headers -> transform_header transform_headers
Rule 36    transform_headers -> empty
Rule 37    transform_header -> MEMORIZED
Rule 38    transform_header -> FROM matrix_list
Rule 39    transform_header -> TO matrix_list
Rule 40    transform_header -> THROUGH matrix_list
Rule 41    transform_header -> ACCURACYBINS float_list
Rule 42    transform_header -> TRANSFORM ID
Rule 43    transform_header -> FUNCTION ID
Rule 44    transform_header -> GENERATOR ID
Rule 45    transform_header -> ACCURACYMETRIC ID
Rule 46    transform_header -> PARAM ID
Rule 47    transform_header -> TEMPLATE chevron_arg
Rule 48    transform_header -> ACCURACYVARIABLE config_arg
Rule 49    transform_header -> CONFIG config_arg
Rule 50    transform_header -> TUNABLE config_arg
Rule 51    transform_header -> MAIN TRANSFORM ID
Rule 52    chevron_arg -> LCHEV configs RCHEV
Rule 53    configs -> config_arg COMMA configs
Rule 54    configs -> config_arg OTHER config_arg
Rule 55    configs -> config_arg
Rule 56    config_arg -> ID LPAREN num_list_string RPAREN
Rule 57    config_arg -> ID LPAREN RPAREN
Rule 58    config_arg -> ID
Rule 59    config_arg -> OTHER
Rule 60    num_list_string -> OTHER COMMA num_list_string
Rule 61    num_list_string -> OTHER
Rule 62    matrix_list -> matrix COMMA matrix_list
Rule 63    matrix_list -> matrix
Rule 64    matrix -> ident LSQBRACE dimensions RSQBRACE
Rule 65    matrix -> ident
Rule 66    ident -> ID
Rule 67    ident -> ID chevron_arg
Rule 68    dimensions -> expression COMMA dimensions
Rule 69    dimensions -> expression
Rule 70    expression -> ID expression
Rule 71    expression -> OTHER expression
Rule 72    expression -> expression OTHER expression
Rule 73    expression -> expression COMMA expression
Rule 74    expression -> expression LCHEV expression
Rule 75    expression -> expression RCHEV expression
Rule 76    expression -> LPAREN expression RPAREN
Rule 77    expression -> expression OTHER
Rule 78    expression -> ID
Rule 79    expression -> OTHER
Rule 80    float_list -> OTHER COMMA float_list
Rule 81    float_list -> OTHER
Rule 82    body -> LINE body
Rule 83    body -> ifdef body
Rule 84    body -> LBRACE body RBRACE body
Rule 85    body -> empty
Rule 86    ccode -> empty
Rule 87    ccode -> CLBRACE body CRBRACE
Rule 88    empty -> <empty>

Terminals, with rules where they appear

ACCURACYBINS         : 41
ACCURACYMETRIC       : 45
ACCURACYVARIABLE     : 48
BLOCKCOMMENT         : 
CLBRACE              : 87
COMMA                : 14 53 60 62 68 73 80
CONFIG               : 49
CRBRACE              : 87
DEFINE               : 6 7 8 9
DUPLICATE            : 
ELIF                 : 24 25
ELSE                 : 26 27
ENDIF                : 26 27 28
FILE                 : 4
FROM                 : 38
FUNCTION             : 43
GENERATOR            : 44
ID                   : 6 7 8 9 10 11 12 13 14 15 29 42 43 44 45 46 51 56 57 58 66 67 70 78
IF                   : 22 23
IFDEF                : 18 19
IFNDEF               : 20 21
INCLUDE              : 4
LBRACE               : 8 34 84
LCHEV                : 52 74
LCOMMENT             : 
LINE                 : 8 30 32 82
LINECOMMENT          : 
LPAREN               : 7 8 11 12 56 57 76
LSQBRACE             : 64
MAIN                 : 51
MEMORIZED            : 37
OTHER                : 31 54 59 60 61 71 72 77 79 80 81
PARAM                : 46
PRIMARY              : 
PRIORITY             : 
RBRACE               : 8 34 84
RCHEV                : 52 75
RCOMMENT             : 
RECURSIVE            : 
REMARK               : 
ROTATABLE            : 
RPAREN               : 7 8 11 12 56 57 76
RSQBRACE             : 64
RULE                 : 
SECONDARY            : 
TEMPLATE             : 47
THROUGH              : 40
TO                   : 39
TRANSFORM            : 42 51
TUNABLE              : 50
UNDEF                : 10 11 12 13
WHERE                : 
error                : 

Nonterminals, with rules where they appear

body                 : 19 21 23 25 27 34 82 83 84 84 87
ccode                : 1
chevron_arg          : 47 67
cond_id              : 18 19 20 21
cond_number          : 22 23 24 25
config_arg           : 48 49 50 53 54 54 55
configs              : 52 53
define               : 1
dimensions           : 64 68
elif_block           : 18 19 20 21 22 23 24 25
empty                : 2 3 5 17 33 36 85 86
expression           : 7 9 12 13 68 69 70 71 72 72 73 73 74 74 75 75 76 77
float_list           : 41 80
id_list              : 7 8 11 12 14
ident                : 64 65
ifdef                : 16 83
ifdefs               : 1
include              : 1
matrix               : 62 63
matrix_list          : 38 39 40 62
num_list_string      : 56 60
petabricks           : 1 18 20 22 24 26 0
transform            : 1
transform_header     : 35
transform_headers    : 34 35

Parsing method: LALR

state 0

    (0) S' -> . petabricks
    (1) petabricks -> . include define ifdefs transform ccode petabricks
    (2) petabricks -> . empty
    (3) include -> . empty
    (4) include -> . INCLUDE FILE
    (88) empty -> .

  ! shift/reduce conflict for INCLUDE resolved as shift
    INCLUDE         shift and go to state 2
    $end            reduce using rule 88 (empty -> .)
    DEFINE          reduce using rule 88 (empty -> .)
    UNDEF           reduce using rule 88 (empty -> .)
    IFDEF           reduce using rule 88 (empty -> .)
    IFNDEF          reduce using rule 88 (empty -> .)
    IF              reduce using rule 88 (empty -> .)
    MEMORIZED       reduce using rule 88 (empty -> .)
    FROM            reduce using rule 88 (empty -> .)
    TO              reduce using rule 88 (empty -> .)
    THROUGH         reduce using rule 88 (empty -> .)
    ACCURACYBINS    reduce using rule 88 (empty -> .)
    TRANSFORM       reduce using rule 88 (empty -> .)
    FUNCTION        reduce using rule 88 (empty -> .)
    GENERATOR       reduce using rule 88 (empty -> .)
    ACCURACYMETRIC  reduce using rule 88 (empty -> .)
    PARAM           reduce using rule 88 (empty -> .)
    TEMPLATE        reduce using rule 88 (empty -> .)
    ACCURACYVARIABLE reduce using rule 88 (empty -> .)
    CONFIG          reduce using rule 88 (empty -> .)
    TUNABLE         reduce using rule 88 (empty -> .)
    MAIN            reduce using rule 88 (empty -> .)
    CLBRACE         reduce using rule 88 (empty -> .)
    LBRACE          reduce using rule 88 (empty -> .)

  ! INCLUDE         [ reduce using rule 88 (empty -> .) ]

    petabricks                     shift and go to state 1
    include                        shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> petabricks .



state 2

    (4) include -> INCLUDE . FILE

    FILE            shift and go to state 5


state 3

    (1) petabricks -> include . define ifdefs transform ccode petabricks
    (5) define -> . empty
    (6) define -> . DEFINE ID
    (7) define -> . DEFINE ID LPAREN id_list RPAREN expression
    (8) define -> . DEFINE ID LPAREN id_list RPAREN LBRACE LINE RBRACE
    (9) define -> . DEFINE ID expression
    (10) define -> . UNDEF ID
    (11) define -> . UNDEF ID LPAREN id_list RPAREN
    (12) define -> . UNDEF ID LPAREN id_list RPAREN expression
    (13) define -> . UNDEF ID expression
    (88) empty -> .

  ! shift/reduce conflict for DEFINE resolved as shift
  ! shift/reduce conflict for UNDEF resolved as shift
    DEFINE          shift and go to state 7
    UNDEF           shift and go to state 6
    IFDEF           reduce using rule 88 (empty -> .)
    IFNDEF          reduce using rule 88 (empty -> .)
    IF              reduce using rule 88 (empty -> .)
    MEMORIZED       reduce using rule 88 (empty -> .)
    FROM            reduce using rule 88 (empty -> .)
    TO              reduce using rule 88 (empty -> .)
    THROUGH         reduce using rule 88 (empty -> .)
    ACCURACYBINS    reduce using rule 88 (empty -> .)
    TRANSFORM       reduce using rule 88 (empty -> .)
    FUNCTION        reduce using rule 88 (empty -> .)
    GENERATOR       reduce using rule 88 (empty -> .)
    ACCURACYMETRIC  reduce using rule 88 (empty -> .)
    PARAM           reduce using rule 88 (empty -> .)
    TEMPLATE        reduce using rule 88 (empty -> .)
    ACCURACYVARIABLE reduce using rule 88 (empty -> .)
    CONFIG          reduce using rule 88 (empty -> .)
    TUNABLE         reduce using rule 88 (empty -> .)
    MAIN            reduce using rule 88 (empty -> .)
    CLBRACE         reduce using rule 88 (empty -> .)
    INCLUDE         reduce using rule 88 (empty -> .)
    LBRACE          reduce using rule 88 (empty -> .)
    $end            reduce using rule 88 (empty -> .)
    ELIF            reduce using rule 88 (empty -> .)
    ELSE            reduce using rule 88 (empty -> .)
    ENDIF           reduce using rule 88 (empty -> .)

  ! DEFINE          [ reduce using rule 88 (empty -> .) ]
  ! UNDEF           [ reduce using rule 88 (empty -> .) ]

    empty                          shift and go to state 8
    define                         shift and go to state 9

state 4

    (2) petabricks -> empty .
    (3) include -> empty .

  ! reduce/reduce conflict for $end resolved using rule 2 (petabricks -> empty .)
  ! reduce/reduce conflict for ELIF resolved using rule 2 (petabricks -> empty .)
  ! reduce/reduce conflict for ELSE resolved using rule 2 (petabricks -> empty .)
  ! reduce/reduce conflict for ENDIF resolved using rule 2 (petabricks -> empty .)
    $end            reduce using rule 2 (petabricks -> empty .)
    ELIF            reduce using rule 2 (petabricks -> empty .)
    ELSE            reduce using rule 2 (petabricks -> empty .)
    ENDIF           reduce using rule 2 (petabricks -> empty .)
    DEFINE          reduce using rule 3 (include -> empty .)
    UNDEF           reduce using rule 3 (include -> empty .)
    IFDEF           reduce using rule 3 (include -> empty .)
    IFNDEF          reduce using rule 3 (include -> empty .)
    IF              reduce using rule 3 (include -> empty .)
    MEMORIZED       reduce using rule 3 (include -> empty .)
    FROM            reduce using rule 3 (include -> empty .)
    TO              reduce using rule 3 (include -> empty .)
    THROUGH         reduce using rule 3 (include -> empty .)
    ACCURACYBINS    reduce using rule 3 (include -> empty .)
    TRANSFORM       reduce using rule 3 (include -> empty .)
    FUNCTION        reduce using rule 3 (include -> empty .)
    GENERATOR       reduce using rule 3 (include -> empty .)
    ACCURACYMETRIC  reduce using rule 3 (include -> empty .)
    PARAM           reduce using rule 3 (include -> empty .)
    TEMPLATE        reduce using rule 3 (include -> empty .)
    ACCURACYVARIABLE reduce using rule 3 (include -> empty .)
    CONFIG          reduce using rule 3 (include -> empty .)
    TUNABLE         reduce using rule 3 (include -> empty .)
    MAIN            reduce using rule 3 (include -> empty .)
    CLBRACE         reduce using rule 3 (include -> empty .)
    INCLUDE         reduce using rule 3 (include -> empty .)
    LBRACE          reduce using rule 3 (include -> empty .)

  ! $end            [ reduce using rule 3 (include -> empty .) ]
  ! ELIF            [ reduce using rule 3 (include -> empty .) ]
  ! ELSE            [ reduce using rule 3 (include -> empty .) ]
  ! ENDIF           [ reduce using rule 3 (include -> empty .) ]


state 5

    (4) include -> INCLUDE FILE .

    DEFINE          reduce using rule 4 (include -> INCLUDE FILE .)
    UNDEF           reduce using rule 4 (include -> INCLUDE FILE .)
    IFDEF           reduce using rule 4 (include -> INCLUDE FILE .)
    IFNDEF          reduce using rule 4 (include -> INCLUDE FILE .)
    IF              reduce using rule 4 (include -> INCLUDE FILE .)
    MEMORIZED       reduce using rule 4 (include -> INCLUDE FILE .)
    FROM            reduce using rule 4 (include -> INCLUDE FILE .)
    TO              reduce using rule 4 (include -> INCLUDE FILE .)
    THROUGH         reduce using rule 4 (include -> INCLUDE FILE .)
    ACCURACYBINS    reduce using rule 4 (include -> INCLUDE FILE .)
    TRANSFORM       reduce using rule 4 (include -> INCLUDE FILE .)
    FUNCTION        reduce using rule 4 (include -> INCLUDE FILE .)
    GENERATOR       reduce using rule 4 (include -> INCLUDE FILE .)
    ACCURACYMETRIC  reduce using rule 4 (include -> INCLUDE FILE .)
    PARAM           reduce using rule 4 (include -> INCLUDE FILE .)
    TEMPLATE        reduce using rule 4 (include -> INCLUDE FILE .)
    ACCURACYVARIABLE reduce using rule 4 (include -> INCLUDE FILE .)
    CONFIG          reduce using rule 4 (include -> INCLUDE FILE .)
    TUNABLE         reduce using rule 4 (include -> INCLUDE FILE .)
    MAIN            reduce using rule 4 (include -> INCLUDE FILE .)
    CLBRACE         reduce using rule 4 (include -> INCLUDE FILE .)
    INCLUDE         reduce using rule 4 (include -> INCLUDE FILE .)
    LBRACE          reduce using rule 4 (include -> INCLUDE FILE .)
    ELIF            reduce using rule 4 (include -> INCLUDE FILE .)
    ELSE            reduce using rule 4 (include -> INCLUDE FILE .)
    ENDIF           reduce using rule 4 (include -> INCLUDE FILE .)
    $end            reduce using rule 4 (include -> INCLUDE FILE .)


state 6

    (10) define -> UNDEF . ID
    (11) define -> UNDEF . ID LPAREN id_list RPAREN
    (12) define -> UNDEF . ID LPAREN id_list RPAREN expression
    (13) define -> UNDEF . ID expression

    ID              shift and go to state 10


state 7

    (6) define -> DEFINE . ID
    (7) define -> DEFINE . ID LPAREN id_list RPAREN expression
    (8) define -> DEFINE . ID LPAREN id_list RPAREN LBRACE LINE RBRACE
    (9) define -> DEFINE . ID expression

    ID              shift and go to state 11


state 8

    (5) define -> empty .

    IFDEF           reduce using rule 5 (define -> empty .)
    IFNDEF          reduce using rule 5 (define -> empty .)
    IF              reduce using rule 5 (define -> empty .)
    MEMORIZED       reduce using rule 5 (define -> empty .)
    FROM            reduce using rule 5 (define -> empty .)
    TO              reduce using rule 5 (define -> empty .)
    THROUGH         reduce using rule 5 (define -> empty .)
    ACCURACYBINS    reduce using rule 5 (define -> empty .)
    TRANSFORM       reduce using rule 5 (define -> empty .)
    FUNCTION        reduce using rule 5 (define -> empty .)
    GENERATOR       reduce using rule 5 (define -> empty .)
    ACCURACYMETRIC  reduce using rule 5 (define -> empty .)
    PARAM           reduce using rule 5 (define -> empty .)
    TEMPLATE        reduce using rule 5 (define -> empty .)
    ACCURACYVARIABLE reduce using rule 5 (define -> empty .)
    CONFIG          reduce using rule 5 (define -> empty .)
    TUNABLE         reduce using rule 5 (define -> empty .)
    MAIN            reduce using rule 5 (define -> empty .)
    CLBRACE         reduce using rule 5 (define -> empty .)
    INCLUDE         reduce using rule 5 (define -> empty .)
    DEFINE          reduce using rule 5 (define -> empty .)
    UNDEF           reduce using rule 5 (define -> empty .)
    LBRACE          reduce using rule 5 (define -> empty .)
    $end            reduce using rule 5 (define -> empty .)
    ELIF            reduce using rule 5 (define -> empty .)
    ELSE            reduce using rule 5 (define -> empty .)
    ENDIF           reduce using rule 5 (define -> empty .)


state 9

    (1) petabricks -> include define . ifdefs transform ccode petabricks
    (16) ifdefs -> . ifdef
    (17) ifdefs -> . empty
    (18) ifdef -> . IFDEF cond_id petabricks elif_block
    (19) ifdef -> . IFDEF cond_id body elif_block
    (20) ifdef -> . IFNDEF cond_id petabricks elif_block
    (21) ifdef -> . IFNDEF cond_id body elif_block
    (22) ifdef -> . IF cond_number petabricks elif_block
    (23) ifdef -> . IF cond_number body elif_block
    (88) empty -> .

  ! shift/reduce conflict for IFDEF resolved as shift
  ! shift/reduce conflict for IFNDEF resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    IFDEF           shift and go to state 13
    IFNDEF          shift and go to state 16
    IF              shift and go to state 14
    MEMORIZED       reduce using rule 88 (empty -> .)
    FROM            reduce using rule 88 (empty -> .)
    TO              reduce using rule 88 (empty -> .)
    THROUGH         reduce using rule 88 (empty -> .)
    ACCURACYBINS    reduce using rule 88 (empty -> .)
    TRANSFORM       reduce using rule 88 (empty -> .)
    FUNCTION        reduce using rule 88 (empty -> .)
    GENERATOR       reduce using rule 88 (empty -> .)
    ACCURACYMETRIC  reduce using rule 88 (empty -> .)
    PARAM           reduce using rule 88 (empty -> .)
    TEMPLATE        reduce using rule 88 (empty -> .)
    ACCURACYVARIABLE reduce using rule 88 (empty -> .)
    CONFIG          reduce using rule 88 (empty -> .)
    TUNABLE         reduce using rule 88 (empty -> .)
    MAIN            reduce using rule 88 (empty -> .)
    CLBRACE         reduce using rule 88 (empty -> .)
    INCLUDE         reduce using rule 88 (empty -> .)
    DEFINE          reduce using rule 88 (empty -> .)
    UNDEF           reduce using rule 88 (empty -> .)
    LBRACE          reduce using rule 88 (empty -> .)
    $end            reduce using rule 88 (empty -> .)
    ELIF            reduce using rule 88 (empty -> .)
    ELSE            reduce using rule 88 (empty -> .)
    ENDIF           reduce using rule 88 (empty -> .)

  ! IFDEF           [ reduce using rule 88 (empty -> .) ]
  ! IFNDEF          [ reduce using rule 88 (empty -> .) ]
  ! IF              [ reduce using rule 88 (empty -> .) ]

    ifdefs                         shift and go to state 12
    ifdef                          shift and go to state 15
    empty                          shift and go to state 17

state 10

    (10) define -> UNDEF ID .
    (11) define -> UNDEF ID . LPAREN id_list RPAREN
    (12) define -> UNDEF ID . LPAREN id_list RPAREN expression
    (13) define -> UNDEF ID . expression
    (70) expression -> . ID expression
    (71) expression -> . OTHER expression
    (72) expression -> . expression OTHER expression
    (73) expression -> . expression COMMA expression
    (74) expression -> . expression LCHEV expression
    (75) expression -> . expression RCHEV expression
    (76) expression -> . LPAREN expression RPAREN
    (77) expression -> . expression OTHER
    (78) expression -> . ID
    (79) expression -> . OTHER

    IFDEF           reduce using rule 10 (define -> UNDEF ID .)
    IFNDEF          reduce using rule 10 (define -> UNDEF ID .)
    IF              reduce using rule 10 (define -> UNDEF ID .)
    MEMORIZED       reduce using rule 10 (define -> UNDEF ID .)
    FROM            reduce using rule 10 (define -> UNDEF ID .)
    TO              reduce using rule 10 (define -> UNDEF ID .)
    THROUGH         reduce using rule 10 (define -> UNDEF ID .)
    ACCURACYBINS    reduce using rule 10 (define -> UNDEF ID .)
    TRANSFORM       reduce using rule 10 (define -> UNDEF ID .)
    FUNCTION        reduce using rule 10 (define -> UNDEF ID .)
    GENERATOR       reduce using rule 10 (define -> UNDEF ID .)
    ACCURACYMETRIC  reduce using rule 10 (define -> UNDEF ID .)
    PARAM           reduce using rule 10 (define -> UNDEF ID .)
    TEMPLATE        reduce using rule 10 (define -> UNDEF ID .)
    ACCURACYVARIABLE reduce using rule 10 (define -> UNDEF ID .)
    CONFIG          reduce using rule 10 (define -> UNDEF ID .)
    TUNABLE         reduce using rule 10 (define -> UNDEF ID .)
    MAIN            reduce using rule 10 (define -> UNDEF ID .)
    CLBRACE         reduce using rule 10 (define -> UNDEF ID .)
    INCLUDE         reduce using rule 10 (define -> UNDEF ID .)
    DEFINE          reduce using rule 10 (define -> UNDEF ID .)
    UNDEF           reduce using rule 10 (define -> UNDEF ID .)
    LBRACE          reduce using rule 10 (define -> UNDEF ID .)
    $end            reduce using rule 10 (define -> UNDEF ID .)
    ELIF            reduce using rule 10 (define -> UNDEF ID .)
    ELSE            reduce using rule 10 (define -> UNDEF ID .)
    ENDIF           reduce using rule 10 (define -> UNDEF ID .)
    LPAREN          shift and go to state 19
    ID              shift and go to state 21
    OTHER           shift and go to state 18

    expression                     shift and go to state 20

state 11

    (6) define -> DEFINE ID .
    (7) define -> DEFINE ID . LPAREN id_list RPAREN expression
    (8) define -> DEFINE ID . LPAREN id_list RPAREN LBRACE LINE RBRACE
    (9) define -> DEFINE ID . expression
    (70) expression -> . ID expression
    (71) expression -> . OTHER expression
    (72) expression -> . expression OTHER expression
    (73) expression -> . expression COMMA expression
    (74) expression -> . expression LCHEV expression
    (75) expression -> . expression RCHEV expression
    (76) expression -> . LPAREN expression RPAREN
    (77) expression -> . expression OTHER
    (78) expression -> . ID
    (79) expression -> . OTHER

    IFDEF           reduce using rule 6 (define -> DEFINE ID .)
    IFNDEF          reduce using rule 6 (define -> DEFINE ID .)
    IF              reduce using rule 6 (define -> DEFINE ID .)
    MEMORIZED       reduce using rule 6 (define -> DEFINE ID .)
    FROM            reduce using rule 6 (define -> DEFINE ID .)
    TO              reduce using rule 6 (define -> DEFINE ID .)
    THROUGH         reduce using rule 6 (define -> DEFINE ID .)
    ACCURACYBINS    reduce using rule 6 (define -> DEFINE ID .)
    TRANSFORM       reduce using rule 6 (define -> DEFINE ID .)
    FUNCTION        reduce using rule 6 (define -> DEFINE ID .)
    GENERATOR       reduce using rule 6 (define -> DEFINE ID .)
    ACCURACYMETRIC  reduce using rule 6 (define -> DEFINE ID .)
    PARAM           reduce using rule 6 (define -> DEFINE ID .)
    TEMPLATE        reduce using rule 6 (define -> DEFINE ID .)
    ACCURACYVARIABLE reduce using rule 6 (define -> DEFINE ID .)
    CONFIG          reduce using rule 6 (define -> DEFINE ID .)
    TUNABLE         reduce using rule 6 (define -> DEFINE ID .)
    MAIN            reduce using rule 6 (define -> DEFINE ID .)
    CLBRACE         reduce using rule 6 (define -> DEFINE ID .)
    INCLUDE         reduce using rule 6 (define -> DEFINE ID .)
    DEFINE          reduce using rule 6 (define -> DEFINE ID .)
    UNDEF           reduce using rule 6 (define -> DEFINE ID .)
    LBRACE          reduce using rule 6 (define -> DEFINE ID .)
    $end            reduce using rule 6 (define -> DEFINE ID .)
    ELIF            reduce using rule 6 (define -> DEFINE ID .)
    ELSE            reduce using rule 6 (define -> DEFINE ID .)
    ENDIF           reduce using rule 6 (define -> DEFINE ID .)
    LPAREN          shift and go to state 22
    ID              shift and go to state 21
    OTHER           shift and go to state 18

    expression                     shift and go to state 23

state 12

    (1) petabricks -> include define ifdefs . transform ccode petabricks
    (33) transform -> . empty
    (34) transform -> . transform_headers LBRACE body RBRACE
    (88) empty -> .
    (35) transform_headers -> . transform_header transform_headers
    (36) transform_headers -> . empty
    (37) transform_header -> . MEMORIZED
    (38) transform_header -> . FROM matrix_list
    (39) transform_header -> . TO matrix_list
    (40) transform_header -> . THROUGH matrix_list
    (41) transform_header -> . ACCURACYBINS float_list
    (42) transform_header -> . TRANSFORM ID
    (43) transform_header -> . FUNCTION ID
    (44) transform_header -> . GENERATOR ID
    (45) transform_header -> . ACCURACYMETRIC ID
    (46) transform_header -> . PARAM ID
    (47) transform_header -> . TEMPLATE chevron_arg
    (48) transform_header -> . ACCURACYVARIABLE config_arg
    (49) transform_header -> . CONFIG config_arg
    (50) transform_header -> . TUNABLE config_arg
    (51) transform_header -> . MAIN TRANSFORM ID

  ! shift/reduce conflict for MEMORIZED resolved as shift
  ! shift/reduce conflict for FROM resolved as shift
  ! shift/reduce conflict for TO resolved as shift
  ! shift/reduce conflict for THROUGH resolved as shift
  ! shift/reduce conflict for ACCURACYBINS resolved as shift
  ! shift/reduce conflict for TRANSFORM resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for GENERATOR resolved as shift
  ! shift/reduce conflict for ACCURACYMETRIC resolved as shift
  ! shift/reduce conflict for PARAM resolved as shift
  ! shift/reduce conflict for TEMPLATE resolved as shift
  ! shift/reduce conflict for ACCURACYVARIABLE resolved as shift
  ! shift/reduce conflict for CONFIG resolved as shift
  ! shift/reduce conflict for TUNABLE resolved as shift
  ! shift/reduce conflict for MAIN resolved as shift
    IFDEF           reduce using rule 88 (empty -> .)
    IFNDEF          reduce using rule 88 (empty -> .)
    IF              reduce using rule 88 (empty -> .)
    CLBRACE         reduce using rule 88 (empty -> .)
    INCLUDE         reduce using rule 88 (empty -> .)
    DEFINE          reduce using rule 88 (empty -> .)
    UNDEF           reduce using rule 88 (empty -> .)
    LBRACE          reduce using rule 88 (empty -> .)
    $end            reduce using rule 88 (empty -> .)
    ELIF            reduce using rule 88 (empty -> .)
    ELSE            reduce using rule 88 (empty -> .)
    ENDIF           reduce using rule 88 (empty -> .)
    MEMORIZED       shift and go to state 35
    FROM            shift and go to state 37
    TO              shift and go to state 32
    THROUGH         shift and go to state 39
    ACCURACYBINS    shift and go to state 38
    TRANSFORM       shift and go to state 26
    FUNCTION        shift and go to state 24
    GENERATOR       shift and go to state 25
    ACCURACYMETRIC  shift and go to state 30
    PARAM           shift and go to state 36
    TEMPLATE        shift and go to state 40
    ACCURACYVARIABLE shift and go to state 41
    CONFIG          shift and go to state 42
    TUNABLE         shift and go to state 27
    MAIN            shift and go to state 29

  ! MEMORIZED       [ reduce using rule 88 (empty -> .) ]
  ! FROM            [ reduce using rule 88 (empty -> .) ]
  ! TO              [ reduce using rule 88 (empty -> .) ]
  ! THROUGH         [ reduce using rule 88 (empty -> .) ]
  ! ACCURACYBINS    [ reduce using rule 88 (empty -> .) ]
  ! TRANSFORM       [ reduce using rule 88 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 88 (empty -> .) ]
  ! GENERATOR       [ reduce using rule 88 (empty -> .) ]
  ! ACCURACYMETRIC  [ reduce using rule 88 (empty -> .) ]
  ! PARAM           [ reduce using rule 88 (empty -> .) ]
  ! TEMPLATE        [ reduce using rule 88 (empty -> .) ]
  ! ACCURACYVARIABLE [ reduce using rule 88 (empty -> .) ]
  ! CONFIG          [ reduce using rule 88 (empty -> .) ]
  ! TUNABLE         [ reduce using rule 88 (empty -> .) ]
  ! MAIN            [ reduce using rule 88 (empty -> .) ]

    transform                      shift and go to state 31
    transform_headers              shift and go to state 28
    transform_header               shift and go to state 34
    empty                          shift and go to state 33

state 13

    (18) ifdef -> IFDEF . cond_id petabricks elif_block
    (19) ifdef -> IFDEF . cond_id body elif_block
    (29) cond_id -> . ID
    (30) cond_id -> . LINE

    ID              shift and go to state 45
    LINE            shift and go to state 44

    cond_id                        shift and go to state 43

state 14

    (22) ifdef -> IF . cond_number petabricks elif_block
    (23) ifdef -> IF . cond_number body elif_block
    (31) cond_number -> . OTHER
    (32) cond_number -> . LINE

    OTHER           shift and go to state 47
    LINE            shift and go to state 48

    cond_number                    shift and go to state 46

state 15

    (16) ifdefs -> ifdef .

    IFDEF           reduce using rule 16 (ifdefs -> ifdef .)
    IFNDEF          reduce using rule 16 (ifdefs -> ifdef .)
    IF              reduce using rule 16 (ifdefs -> ifdef .)
    MEMORIZED       reduce using rule 16 (ifdefs -> ifdef .)
    FROM            reduce using rule 16 (ifdefs -> ifdef .)
    TO              reduce using rule 16 (ifdefs -> ifdef .)
    THROUGH         reduce using rule 16 (ifdefs -> ifdef .)
    ACCURACYBINS    reduce using rule 16 (ifdefs -> ifdef .)
    TRANSFORM       reduce using rule 16 (ifdefs -> ifdef .)
    FUNCTION        reduce using rule 16 (ifdefs -> ifdef .)
    GENERATOR       reduce using rule 16 (ifdefs -> ifdef .)
    ACCURACYMETRIC  reduce using rule 16 (ifdefs -> ifdef .)
    PARAM           reduce using rule 16 (ifdefs -> ifdef .)
    TEMPLATE        reduce using rule 16 (ifdefs -> ifdef .)
    ACCURACYVARIABLE reduce using rule 16 (ifdefs -> ifdef .)
    CONFIG          reduce using rule 16 (ifdefs -> ifdef .)
    TUNABLE         reduce using rule 16 (ifdefs -> ifdef .)
    MAIN            reduce using rule 16 (ifdefs -> ifdef .)
    CLBRACE         reduce using rule 16 (ifdefs -> ifdef .)
    INCLUDE         reduce using rule 16 (ifdefs -> ifdef .)
    DEFINE          reduce using rule 16 (ifdefs -> ifdef .)
    UNDEF           reduce using rule 16 (ifdefs -> ifdef .)
    LBRACE          reduce using rule 16 (ifdefs -> ifdef .)
    $end            reduce using rule 16 (ifdefs -> ifdef .)
    ELIF            reduce using rule 16 (ifdefs -> ifdef .)
    ELSE            reduce using rule 16 (ifdefs -> ifdef .)
    ENDIF           reduce using rule 16 (ifdefs -> ifdef .)


state 16

    (20) ifdef -> IFNDEF . cond_id petabricks elif_block
    (21) ifdef -> IFNDEF . cond_id body elif_block
    (29) cond_id -> . ID
    (30) cond_id -> . LINE

    ID              shift and go to state 45
    LINE            shift and go to state 44

    cond_id                        shift and go to state 49

state 17

    (17) ifdefs -> empty .
